1. Alle Icons hinzugefügt, ggf. ausgetauscht, Speicherung geändert => TypeGenerator umgeschrieben um IconData() speicherbar zu machen 2. ListOverview angefangen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,9 @@ flutter:
     - family: CustItems1
       fonts:
         - asset: assets/fonts/1.ttf
+    - family: appicons
+      fonts:
+        - asset: assets/fonts/appicons.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
