--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   assets:
     - assets/defaultJsons/
     - assets/fonts/
+    - assets/pythonfiles/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
