--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   hive: ^1.4.4
   hive_flutter: ^0.3.1
   shared_preferences: ^0.5.12
+  starflut:
+    path: starcore_for_flutter/starflut
   http:
 
   # The following adds the Cupertino Icons font to your application.
